--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
   "public": true,
-  "functions": {
-    "api/**/*.[jt]s": {
-      "runtime": "vercel-deno@3.1.1",
-      "maxDuration": 5
-    }
-  },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/api/$1"
+      "src": "/(.*)",
+      "dest": "/index.ts"
     }
   ]
 }
